Fix ProductHolder going out of bounds on mobile

--- a/src/assets/productholder.css
+++ b/src/assets/productholder.css
@@ -109,10 +109,10 @@
   align-items: center;
   background: var(--main-bg-color);
   border-radius: 12px;
-  padding: 40px 0;
+  height: 100%;
   z-index: 1;
 }
-@media (max-width: 900px) {
+@media (max-width: 1024px) {
   .product-holder-wrapper {
     padding: 24px 0;
     max-width: 100%;
@@ -124,7 +124,6 @@
     gap: 10px;
   }
   .product-slot {
-    min-width: 80px;
     max-width: 120px;
   }
 }
